<?xml version="1.0"?>
<package>
  <name>saw_copley_controller_config</name>
  <version>0.0.1</version>
  <description>mtsCopleyController config files</description>

  <maintainer email="pkaz@jhu.edu">Peter Kazanzides</maintainer>

  <license>cisst</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
